<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name_bg">ImageTextBG</string>
    <string name="app_name">ImageText</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_text_result">TextResultActivity</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="loading_please_wait">Processing Image...</string>
    <string name="select_image">Select Image</string>
    <string name="get_text">Get Text</string>
    <string name="main_image_to_ocr">main image to OCR</string>
    <string name="no_result">No Result</string>
    <string name="save_txt_to_file">Save text to file</string>
    <string name="send_to_mail">Send to email</string>
    <string name="save_text_to_file">Save text to file</string>

</resources>
