<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/linearLayout">

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/btnSelectPhoto"
            android:background="@drawable/my_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:textColor="@drawable/my_button_text_color"
            android:layout_toLeftOf="@+id/centerPoint2"
            android:layout_alignParentBottom="true"/>

        <TextView
            android:id="@+id/centerPoint2"
            android:text=""
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="7.5dp"
            android:layout_marginRight="7.5dp" />

        <Button
            android:id="@+id/button"
            android:background="@drawable/my_button"
            android:textColor="@drawable/my_button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_text"
            android:onClick="doOCRStuff"
            android:layout_toRightOf="@+id/centerPoint2"
            android:layout_alignParentBottom="true"/>

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/main_image_to_ocr"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
