<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tag.ddamianow.TextResultActivity"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/relativeLayout"
        android:layout_weight="0.88"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <TextView
                android:autoLink="web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_result"
                android:id="@+id/textView_result"

                android:fontFamily="sans-serif"
                android:editable="true"
                android:linksClickable="true"
                android:textSize="15sp" />
        </ScrollView>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/wrapper_layout_text_res"
        android:layout_weight="0.12"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_txt_to_file"
            android:id="@+id/button_saveTextToFile"
            android:background="@drawable/my_button"
            android:textColor="@drawable/my_button_text_color"
            android:onClick="saveTextToFile"
            android:layout_toLeftOf="@+id/centerPoint"
            android:layout_alignParentBottom="true"
            android:layout_gravity="left|bottom" />

        <Button
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to_mail"
            android:id="@+id/button_sendEmail"
            android:background="@drawable/my_button"
            android:textColor="@drawable/my_button_text_color"
            android:onClick="sendFileToUserEmail"
            android:layout_toRightOf="@+id/centerPoint"
            android:layout_alignParentBottom="true"
            android:layout_gravity="right|bottom" />

    </FrameLayout>

</LinearLayout>
